Create cchlib-net project
git-svn-id: https://cchlib.googlecode.com/svn/trunk@2800 bc589049-105d-1923-a3ce-6fcb24364ed1